# rosadmin

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .sops.yaml  README.md  behave.ini  deploy.ps1  main.py  openapi.json  pyproject.toml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  frontend.yml  test.yml
admintools/: pyproject.toml
admintools/rosadmin_admintools/: __init__.py
deploy/caddy/: Caddyfile  caddy.service
deploy/caddy/sites/: production.caddy  staging.caddy
deploy/postgres/: pg_hba.conf  pg_ident.conf  role-bounds.sql
deploy/postgres/conf.d/: 10-rosadmin.conf
deploy/systemd/: rosadmin-db-backup.py  rosadmin-db-backup.service.tmpl  rosadmin-db-backup.timer  rosadmin-shared.env  rosadmin-shared.production.env  rosadmin-sync@.service  rosadmin-sync@.timer  rosadmin@.service  rosadmin@.socket
deploy/systemd/rosadmin-sync@production.service.d/: override.conf
deploy/systemd/rosadmin-sync@staging.service.d/: override.conf
deploy/systemd/rosadmin@production.service.d/: override.conf
deploy/systemd/rosadmin@staging.service.d/: override.conf
deploy/test-infra/: compose.yaml
devtools/: pyproject.toml
devtools/rosadmin_devtools/: __init__.py  fake_login.py  stubs.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts  useGroupAdmin.ts  vite-env.d.ts
frontend/src/api/: client.ts  contract.ts  index.ts  mock.ts
frontend/src/components/: AddPanel.tsx  ControlPanel.tsx  Footer.tsx  GroupCount.tsx  GroupPick.tsx  LoginScreen.tsx  MemberCard.tsx  MemberGrid.tsx  PageHeader.tsx  SearchBar.tsx  Tombstone.tsx
rosadmin/: __main__.py  auth.py  cli.py  credentials.py  google_group.py  group_naming.py  group_sync.py  journal_send.py  reconcile.py  service.py  sso.py  systemd_notify.py
rosadmin/commands/: one_shot.py  roster.py  sync.py
rosadmin/db/: __init__.py  audit.py  directory.py  jti.py  migrate.py  mutations.py  prune.py  rate_limit.py  reconcile.py  roster.py  sessions.py  unmirrorable.py
rosadmin/membership/: errors.py  source.py
rosadmin/membership/solidarity_tech/: client.py  decode.py  fixtures.py
rosadmin/migrations/: README.md  add_leadership_assessment.rollback.sql  add_leadership_assessment.sql  add_mutation_columns.rollback.sql  add_mutation_columns.sql  create_bootstrap_state.rollback.sql  create_bootstrap_state.sql  create_infra_tables.rollback.sql  create_infra_tables.sql  create_membership_tables.rollback.sql  create_membership_tables.sql  create_unmirrorable_addresses.rollback.sql  create_unmirrorable_addresses.sql  grant_app_role.sql  index_members_email_lower.rollback.sql  index_members_email_lower.sql  narrow_body_update_grant.rollback.sql  narrow_body_update_grant.sql  reshape_sessions.rollback.sql  reshape_sessions.sql
rosadmin/mock_st/: cast.py  personas.py  roster.py  server.py
rosadmin/web/: __init__.py  auth.py  clock.py  directory.py  jti.py  models.py  problems.py  rate_limit.py  records.py  routes.py  sessions.py  settings.py
scripts/: build_artifact.sh  dump_openapi.py
scripts/frontend/: build_artifact.sh
scripts/hooks/: pre-commit  pre-push
scripts/rosadmin_deploy/: __main__.py  cli.py  pyproject.toml
secrets/rosadmin/: production.enc.yaml  staging.enc.yaml
tests/features/: admin_control.feature  audit.feature  environment.py  google_group_offline.feature  group_mutations.feature  leader_panel.feature  leader_panel_gates.feature  login.feature  login_gate.feature  mock_control.feature  persona_roster.feature  reconcile_sweep.feature  records_directory.feature  roster_pull.feature  smoke.feature  solidarity_tech_contract.feature
tests/features/steps/: admin_control_steps.py  audit_steps.py  google_group_offline_steps.py  group_mutations_steps.py  leader_panel_steps.py  login_gate_steps.py  login_steps.py  mock_control_steps.py  persona_roster_steps.py  reconcile_sweep_steps.py  records_directory_steps.py  roster_pull_steps.py  smoke_steps.py  solidarity_tech_steps.py
tests/integration/: conftest.py  test_bootstrap_and_linkage.py  test_data_layer.py  test_google_lifecycle.py  test_grants.py  test_jti.py  test_mutation_schema.py  test_rate_limit.py  test_roster_pull_concurrency.py  test_sweep_lock.py
tests/support/: paseto.py  pg.py
tests/unit/: test_audit.py  test_cast.py  test_cli_serve.py  test_credentials.py  test_db.py  test_db_directory.py  test_google_group_poll.py  test_group_naming.py  test_group_sync.py  test_journal_send.py  test_jti.py  test_member.py  test_mock_st.py  test_openapi_contract.py  test_panel_hardening.py  test_provision.py  test_rate_limit.py  test_reconcile_plan.py  test_service.py  test_sessions.py  test_smoke.py  test_solidarity_tech_client.py  test_sso.py  test_st_decode.py  test_stubs.py  test_systemd_notify.py  test_web_models.py
workspace_sync/: auth.py  cli.py  google_group.py
workspace_sync/commands/: one_shot.py
workspace_sync/migrations/: create_membership_tables.sql  create_user.sql
