[project]
name = "rosadmin"
version = "0.1.0"
description = "Synchronizes Google Groups with an external member list from a different backend. This is a jank solution for orgs that can't afford an account for every user."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "cyclopts>=4.15.0",
    "fastapi>=0.138.1",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-logging>=3.15.0",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "black>=26.5.1",
    "google-api-python-client-stubs>=1.37.0",
    "isort>=8.0.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[project.scripts]
rosadmin = "rosadmin.cli:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.pyright]
reportMissingModuleSource = "none"
