[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rosadmin"
version = "0.1.0"
description = "Synchronizes Google Groups with an external member list from a different backend. This is a jank solution for orgs that can't afford an account for every user."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "cyclopts>=4.15.0",
    "fastapi>=0.138.1",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-logging>=3.15.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "black>=26.5.1",
    "google-api-python-client-stubs>=1.37.0",
    "isort>=8.0.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[project.scripts]
rosadmin = "rosadmin.cli:app"

[tool.uv]
package = true

# Package only the application; the repo root also holds non-package dirs (deploy/, scripts/,
# tests/, docs/), and setuptools' flat-layout auto-discovery would otherwise refuse the build
# on seeing more than one top-level candidate.
[tool.setuptools.packages.find]
include = ["rosadmin*"]

# Import order: __future__, stdlib, third-party, the google-api family as its
# own cluster, then first-party - blank line between blocks. Matches black.
[tool.isort]
profile = "black"
py_version = 313
skip_gitignore = true
known_first_party = ["rosadmin"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "GOOGLE", "FIRSTPARTY", "LOCALFOLDER"]
known_google = ["google", "googleapiclient", "google_auth_oauthlib", "google_auth_httplib2"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.pyright]
reportMissingModuleSource = "none"
# scripts/rosadmin_deploy is a standalone uv project: it depends on che-deploya, which lives in
# its own venv, not this one. It carries its own [tool.pyright] (Linux platform) and is checked
# against its own environment - so keep it out of the application's type-check pass here.
exclude = ["**/.venv", "**/__pycache__", "**/node_modules", "**/.*", "scripts/rosadmin_deploy"]
