[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rosadmin"
version = "0.1.0"
description = "Synchronizes Google Groups with an external member list from a different backend. This is a jank solution for orgs that can't afford an account for every user."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "alive-progress>=3.3.0",
    "cryptography>=48.0.0",
    "cyclopts>=4.15.0",
    "fastapi>=0.138.1",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "google-cloud-logging>=3.15.0",
    "httpx>=0.28.1",
    "psycopg-pool>=3.2",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "pyseto>=1.9.3",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
    "yoyo-migrations>=9.0",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "google-api-python-client-stubs>=1.37.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "rosadmin-devtools",
    "ruff>=0.15.20",
    "testcontainers>=4.9",
]

[project.scripts]
rosadmin = "rosadmin.cli:app"

[tool.uv]
package = true

[tool.uv.sources]
rosadmin-devtools = { workspace = true }

[tool.uv.workspace]
members = ["devtools"]

# Package only the application; the repo root also holds non-package dirs (deploy/, scripts/,
# tests/, docs/), and setuptools' flat-layout auto-discovery would otherwise refuse the build
# on seeing more than one top-level candidate.
[tool.setuptools.packages.find]
include = ["rosadmin*"]

[tool.setuptools.package-data]
# The yoyo migration SQL is read at runtime - `rosadmin migrate` locates it by
# package, not working directory - so it must ship inside the wheel, not only the
# source tree the tests run from.
rosadmin = ["migrations/*.sql"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["I", "S608"]

# Import order: __future__, stdlib, third-party, the google-api family as its
# own cluster, then first-party - blank line between blocks.
[tool.ruff.lint.isort]
known-first-party = ["rosadmin", "rosadmin_devtools"]
section-order = ["future", "standard-library", "third-party", "google", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"google" = ["google", "googleapiclient", "google_auth_oauthlib", "google_auth_httplib2"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
markers = [
    "integration: exercises a real ephemeral Postgres (needs a container runtime)",
]

[tool.pyright]
reportMissingModuleSource = "none"
# rosadmin_devtools is its own workspace package under devtools/, not a root-level
# package, so add that directory to the type checker's import search path.
extraPaths = ["devtools"]
# scripts/rosadmin_deploy is a standalone uv project: it depends on che-deploya, which lives in
# its own venv, not this one. It carries its own [tool.pyright] (Linux platform) and is checked
# against its own environment - so keep it out of the application's type-check pass here.
exclude = ["**/.venv", "**/__pycache__", "**/node_modules", "**/.*", "scripts/rosadmin_deploy"]
