[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rosadmin-devtools"
version = "0.1.0"
description = "Development and staging surface for rosadmin: persona-backed stubs and fake-login. Never installed in production."
requires-python = ">=3.13"
dependencies = ["rosadmin"]

[tool.uv.sources]
rosadmin = { workspace = true }

[tool.setuptools.packages.find]
include = ["rosadmin_devtools*"]
